<resources>
    <string name="app_name">Book Store</string>
    <string name="dashboard">Dashboard</string>
    <string name="Favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="the_book_store">The Book Store</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">DashBoard Fragment</string>
    <string name="favourites_fragments">Favourites Fragments</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_fragment">About Fragment</string>
    <string name="list_item">List item</string>
    <string name="hello_i_m_description">Hello I\'m Description</string>
    <string name="hello_world">Hello World</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="_4_5">4.5</string>
    <string name="rs_299">Rs. 299</string>
    <string name="_4_51">4.5</string>
    <string name="name_of_the_author1">Name of the Author</string>
    <string name="rs_2991">Rs. 299</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="action_sort">Action Sort</string>
</resources>