<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    android:background="#ffffff"
    app:cardCornerRadius="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearFav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="11"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFav"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="#f5f5f5"
            android:scaleType="fitCenter"
            android:src="@drawable/book" />

        <TextView
            android:id="@+id/txtFavBookName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/hello_world"
            android:gravity="center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtFavBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/name_of_the_author"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txtFavBookPrice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/rs_299"
            android:gravity="center"
            android:textColor="#357a38"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFavBookRating"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/_4_5"
            android:layout_gravity="center"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_baseline_star_24"
            android:drawableTint="@android:color/holo_orange_light"
            android:textColor="#ffca28"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.cardview.widget.CardView>