<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recyclerCardLayout"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="6dp"
    android:background="#ffffff"
    android:orientation="horizontal"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/recyclerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/imgBookImage"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1.5"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3">

            <TextView
                android:id="@+id/txtBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/name_of_the_book"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtBookName"
                android:padding="8dp"
                android:text="@string/name_of_the_author"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtBookPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtBookAuthor"
                android:layout_alignParentBottom="true"
                android:padding="8dp"
                android:text="@string/rs_299"
                android:textColor="#357a38"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtBookRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:drawableLeft="@drawable/ic_baseline_star_24"
            android:drawablePadding="4dp"
            android:drawableTint="@android:color/holo_orange_light"
            android:padding="4dp"
            android:text="@string/_4_5"
            android:textColor="#ffca28"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.cardview.widget.CardView>